--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Dialogue App</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div id="cont"></div>
     <script src="app.js"></script>
   </body>
 </html>
